Desarrollo e integración de datos de empresa en la aplicación

--- a/aDVanceERP.Modulos.Contactos/MVP/Vistas/Empresa/VistaRegistroEmpresa.resx
+++ b/aDVanceERP.Modulos.Contactos/MVP/Vistas/Empresa/VistaRegistroEmpresa.resx
@@ -121,6 +121,28 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="fieldIcono.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUxJREFUOE/N
+        1KFLXmEUx/EPYpqGgWBYMJgGY5ZNMO4PsBi0GYdhQcRgkDnRIaJBtC0IFhUsFtMWtiBOhlHjGCIiKBgE
+        wYGgHHheeby+r9xr8gc/OOee83y5595zL89E79Gf3IsXxYYqCsA1/iafY6vYVEVf8CvLB3Ca5ZU1iZ9Z
+        HmM/CmzGOI7QgjasZmNVAr7BH1ziBh9xkvL91FMaOIgrbOJDAv7HZwzjDLPYLgv8h6kUv8QGulLeje/4
+        kTySnWsIjItRrKq3aYoHyoEXWM5qu/id4k4s4lvBE2jKztwDrmAoq33FdIrjbuL51vPr7EzpkeMtF0E1
+        x5bcKQfGC/mU1eYxl+InAWPvYuyaYjfDoScBH1Np4A4OsdfA62jHK7zL3IfjesBoHMVYA/dgLf2uci9h
+        JgE7cmAZLdQZ8yCB4muqrFjcWOyiW2sNt5u9e9wrp8c/AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="fieldNombre.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAUNJREFUOE/t
+        lLFKBDEQhg8b0d5asPIhbIRrLMRCrhAsxUZR0EKx8TmuFx/CUmFB8mfBmdyyk2AlKIhWIlgIKzku52Zv
+        WVkOrfxgIMxMfjJhZjqdv8Sl6YI1ajMn9LxZUt1qTity1tvCuBej34TxJIyBc262mtcaIRgxeq/qbyTL
+        0kXLuBBGNnxVMFJrQVAIl+VYzioRwlFRFDOR2EOSzAnDCeNKSO1b0rvfppaCoDN6vRwT1mfCeBXCaSSY
+        G6wK4+MRmI8CI5pKzhmH/m9jJ6EnjOfIWaJRsO5urbPEv2BE7d1aZ4n2glO0jWUcTLTNuLENrn2T5oST
+        YEJYDoLWqK0oxvrcN7Y/R4KeMHqWgchIdcejZ1S/HBPGjTCOJ0bvJ5pKbsVofb1YVp+W8e4XwlTra7hg
+        fcl3tzuO1IYMsFLN+XW+AOuHr0ZSIaRYAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAJ1JREFUOE/l
@@ -129,81 +151,67 @@
         oA550ydKMqdZWpM5TdLNfz09DtOKzFFG2erjsAPe6CA46xMjhLcAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="fieldTextoCuentaCaribe.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldCorreoElectronico.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAADFSURBVDhPzZAxDsIwDEVzDmgl2zkQFRsLt2HnBgwswEKTCIkbAEMnTgAb4gpIRSbxUAtaOoGl
-        L0uJ3nNiY/6mHNHYEV09Ud0axEuwttC88UR3R3T0RCfpLwBgUSLOJOn+pnkW1N7aQ2BYepy4dABziZxr
-        Pgp6RPPGA0z6RPOtghCffnaI+68EDDS67CMutUOAuErLW3MvEaeeqOojeOiFNdIp0IDOJ8EWoEiCHf/5
-        XfguCUaaN5ssGwaRtIQHuTwfaP539QTXtucC5KUYMQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAkBJREFUOE+9
+        VDtrVEEUXp+tz0bsbBURRBCM70b/hI2KaCGChZJSRVEjWImKUREECajgo95CEszON2Z3vrm7c2YRLXwF
+        1EaMBhOunLt3w97rgoXBDwbm3nPOd95TqfxPpGm6sNkwG4LHbj16139lvb/CObdCiCEhJoVIhfiWH71P
+        BuLym4mJ5WW7voju1Q41ikQMxNFWa3xVVyaC1eJxTIi2EJ8kwUDRuoSQ2D1CTAeaS+nIyCI1EG9uCO1o
+        dvSeYKBarS7OM5hu0ewq82TIvBNfxONKkiRLxeOOEL+E5qE4nM4O8ViImUg7rDqRuCrE5yQZW1nmq0Rn
+        LwoR1HvwuC/Eu0C78Q+9pLZJHN4L7T0AS/L0zxeUtHNCfBSPQ3naMy1nNyt59DgjDl6IF0I8Em8OiK9t
+        EWK27Wo7ozNH1EGh+xqJdrDZxBpNJ9A80f95mpPi7eFAe71TAgxlMuKZONyUen2t2raT2vo5QnFmfyC+
+        5yQvg8Op3MgFb0/oPU3TBdFhSoinHZkdDDRjud5USOy+/oTEeJcwEhTiZE6oZVHC57nsuBB1dSTEjwJh
+        b8pC3OpNORJftU6B5rbQ/hRv3waag1rXSFzrm3KhKd5s621KcDg715RGba843O101jzQbenblCwajwvd
+        sdHGqFK7YbcWlErojk2gPVeWVdRbtk7dwe5EMpuNStZtO6hR9a5bPtgfXgPLimw5pGG3F1ZPv3U0aEcj
+        AY08OrOud/W0RGWeAub1cehiXp+vXszbA/sv+A136qoXwNV6IwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="fieldFotoPerfil.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldTelefonoMovil.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAB+xJREFUeF7t
-        nWloHVUUxysuuG8VXEFFwQVExS8uRam7uOCOWq1b3WpVXECIG4h1rZUqLvSDti60insVl6Lxg3tDTaIv
-        c/5nkkaNBpfWWlNttLWRgzciJzfJe/POnTeT3h/84fHy5v7PnZc3M/fOuWfGjYtEIpFIJBKJRCKRyLCk
-        aboLEU1k5ssBNBHR/QBmM/MLInnt3msCcJl8VrbR7UQy0NPTs0mapse6HbyIiH4HMJBFbttFzHwfMx8j
-        bWu/iIe2trbNAFzAzG8DWKV3rKGk7beIaFJvb++mOo51HiI6DMBcAH2enRdavwGYkyTJoTqudYqBgYH1
-        AUwG8IVnJzVKEstkiU3HO6YhoiMBLPbskEKImVvSND1Cxz3mIKLdASzQO6DAWpAkyW66H2MCAFPd8Vp3
-        uuhawcxX6P6UliRJxpfsV+EVEb1eqVS21f0rFUmSHASgS3eurOJ/OUD3sxQw8+kA+nWnxoCkT6fp/hYa
-        IjobwJ+ezlhrLYAfALQ5yWt5T3/OWv1EdKbudyEhoksBrPF0wko/MvNjMq3S0tKyofavVCobJUlyHBE9
-        DuAnz/ZWWsPMF2v/QiEBBvwPXU5E18kO177DIXNWRHQzgF897VlI+nqh9i0EzHx0wMNUa0dHx67as1rc
-        +Kfd066F5PA1UXs2FLnyCDgPtaBSqWyuPWuFiLYA8IanfQutSJJkP+3ZEOTanIi+8QRZt5i52XeeyIq0
-        RUQfaB8jdXZ1dW2lPXMHwHxPcBb6vlKp7KD96oWIdgLQ6/GrW8z8rPbLFXfnbkhgFiKi87WfFXIi1n5W
-        IqJLtF8uyKRbPXfxRhIRfTwwMLCe9rRC2gbwufY1kszX7aw9gwPgeU8wVgp+Keku0bWviYjoOe0XlDRN
-        T9ZBGOqv7u7urbWnNXIxAmC1x99EzHyi9gyC/NyZ+UsdgKE+1J6hkEOjx99KrSEPu/8hczgec0vN1Z6h
-        APC0x99Sp2pPU9zJMPQ98Hu0byiY+V6Pv6UWB/2VuOkRbWoqZr5F+4aCmW/V/taS/AHtawYRvagNA+gR
-        7RsKAI96/E0lGZXa1wR3KzbU5OH/9ZL2DgWAVzz+1loV5KrR3efQZiHUrb1D4M6HX3v8zcXMF2n/ugHw
-        vjYKqP21vzVpmh7o8Q2lhdq/LmT6WwZsHqMgIqK7dAzWALhb+wZUv2kOsYw6PSYh1bdkyZLtdRxWyCxy
-        wPs3XhHR8TqOzACYoQ1y0IM6DiuY+SGPX1DJUggdR2Yk11Ub5KDVksigY6kX+U8NnIQxnD7TsWRCrkZC
-        TbNXIUls2EvHlBVm3idgwsNo6jMZtUtygafxPLXMYrQL4Chm/sXTfm4yWV6Xx3RJFZLMjquyrNtw61Cm
-        5TSoHVEm2Skua31I442QTPsz80nVfDHyGSI6BUBFt9MomWTRA7hdN1wALQMwj4iuBHBCmqb7iuS1/JIk
-        8aLRhyefZDJT79+aIaIHdMNR2WRy6UtET+iGo7JJcpL1/q0ZyTXSDUdl1jN6/9aMZFB4Go7KIJNEunjI
-        spPJISue1O1kclIv6GVvKWVy2VukgWHZZTIwdFUXhjQeVbtMqkNI4rBuOCqbTJZXuGSAXO+ujVEt1/s2
-        MwA+9Rg0Qt8CeFfKKTHznXJ+k4wOIjpLJK/de/K3Oe6zPZ52GqGP9H7NTA4pl0PklsnJkocbZNq6vb19
-        Gx1Xtbhld3IuvNGVApQvdohnYE3XcWVG1n17DKy1EsCrUisxjwUvcrNIvJj5tTzuiMp9JR1DZlzpvRA3
-        eGSd93sAzunu7t5Y++aFrGdn5vNc7lmIdfb95nUejRPl/iCiWWma7qF9Gk1nZ+eeAB42rvlomygnGKWS
-        SidndnR07KjbLxqyWtelC9X9xQRJJZWF9/Uca6XSaBmrs0kVCCJ6R/enBvXJIV+3a0LGhZ6SgjrNJAWm
-        QbixmCRKZFmTOE+3Z4ak0ngMR9PVup2ywszXevo3okwyTUYCwCfadDjJWKKaDJGy0NzcvAGA73Q/R1D4
-        Baw1Jl7ntvgmLwC87OmnVzJ+09ub45ZFV5XrK4Uj9fZlp4aKQja5vNXAzIdXOYBa2sgBnzUyuHM5Ybqf
-        WmulfLrePiiSQeEJxKeZetuyIn3x9M+np/S2wXGLQJd6ghkiIrpNb182ANyh+zWMfm5Yfd8ayjPJ4W2q
-        3r4sMPM1nj551bDyTIPUUMBMvpTr9fZFh5lvqvJ8aZN3VS9uJrjqDHMietKybF8oJEY5F+j4R1BrYS5g
-        MhTBlKcOjNftFAUA2wF40xP3cCpOEcxB0jQ9pMbJR1muNkm302jkkUsSmyfe4bQyTdODdTuFQO5r17qg
-        Ug5hJtkYdeKKY8p9+CExjiCpbn2GbqtQZCw1LrdvpwepCTIK4ilFBGr8dYuKX2p8kDqK8csoeIblytvh
-        ALC3rIXPuNKqPMX4B3GJEfKfrztTjdZKEWUAUywTHlxiwxRXTLmqS1mP+kwTFvLE8IEurfKASWY+V67o
-        qrm8lM9IgRlJXnAPp5THWeh2a1KpH+gyiJTfDlD4bI3L2/rKJfEtdJLXFfe3Ws9jo2l+mqZb6v6VlvhQ
-        sALiMghnAfjb0/GiSX6Fs+rJmCwN8cGSBQXABPdIvaxXPJaSGCSWCTrOdY74cOKCEh/fXWDiA+5LgIy0
-        JfHM3alscl/WbFnz4dZ9zHbvNclSA/msSY2qSCQSiUQikUgkEhnD/ANZObNRhSjc6AAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAANJJREFUOE/t
+        lDEKwlAQRNMoHkBPoVcQGw8giKcQr+KFLCxEi/xJIH8Tzf4UuYGCBFtlhUDYJBAQrPJgmp3d6XY87x8k
+        STLMrL9whN3Nmn1VMhNPdvRdI3l+HKVkLkwomPBkwltJZoUjQHb1fY3UYuMId2aMr5GZMQWHqrLEn2Zh
+        OGHCw8Vmre9rcBxs2SLWc43syK6e1+gDW+kD2+kDW+kcKA8vjy/loL2SshzYYqW9GtJzTMGZCS9pnSaJ
+        x4QTgIG+b+QbGgVzZ82ySeJ1Lthf+QDExU6DlihKRQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="fieldFotoPerfil.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldTelefonoFijo.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAIGNIUk0AAHolAACAgwAA+f8AAIDpAAB1
-        MAAA6mAAADqYAAAXb5JfxUYAAAAJcEhZcwAACwwAAAsMAT9AIsgAAATuSURBVHhe7Z2/ahVBFMajZRrL
-        gI1YCHmKpLJUJFUKIX26EPIEeQOLkD4QX8BGAjYW9raCjYiPIHzNlQ/OYnJy987s7pzZ3btf8YNwc2fm
-        zHx3/8zMOWd2AKzEdNjxH4hxkSATYw6C/AJwB+AKwAWAYwAHAPYB7AHYBfDU4N/8jP/jd/hdlmFZ1sG6
-        fP2TYoqC/ARwC+AMwCGAZ6vVaqcErMvqZN1sg2359kdlKoL8AHBtv+jnfiCjYFvWJtumDd6u6owtyCcA
-        pwBe+sGqDW0wW2iTt7MaYwjyF8ANgCMAT/zAjA1tMttoI2319odSW5CPAN76QZgqtNVs9v0Io5YgXwCc
-        TPGKSGFXDG1nH3y/ihMtyB8AlwBe+I7ODfbB+sI++X4WI1KQzwDe+Y7NHfbJ+ub7W4QoQT4AeOU7sy2w
-        b9ZH3+/BlBbkN4DzOT4rumLPFvaVffbj0JuSgnwH8N4bvu2wz9Z3Px69KCXINwBvvLFLgX23MfDj0pkS
-        gnwF8NobuTQ4BjYWfnw6MVQQ/ioWL0aDiTLoShkiCO+bi71NtWG3r97PlL6C8M1icQ/wXOxB3+vtq68g
-        594I8RB7JfbjlqSPIJwQbf08Yyg2T+k8eewqCJcMtnYGXhqb0XdaZukiCBfVtm5tKhpb+8pekOwiyKVv
-        TORhq8R+PNeSKwj3Ama/hD4WtnSftZ+SK8iJb0R0wza5/Lg+IkcQbmHqrWog9taV3A5OCcJN/tnsgU8d
-        26Pf6DiREuTGVyqGYd4sfpyzBTnyFYphmIuRH+csQegwpmdHYexZ0uqMt0mQU1+ZKIN5SPrx3igI/VxH
-        d+/cVsxtda0vcZsg174SURZz8Pbj3irIsa9AlMW87v24rxWEMRPVQgKWioVCPIpPWSfIrS8sYrCgoaQg
-        Z76giMEiuZKCHPqCIgYLr9soCIMii8X0ic1YzOODQFQvyJ0vJGKx6OBWQa58ARGLhWy3CnLhC4hYLI6+
-        VRBNCCvjJ4hekANfQMRiGSdaBdn3BUQslgakVZA9X0DEYrlZWgXZ9QVELJYwp1WQp76AiMWyGEmQqZAS
-        RLesyqRuWXqoVyb1UNdrb2VSr72aGFYmNTHU0kllUksnWlysTGpxUcvvlUktv2uDqjKpDSpt4VYkZwuX
-        yMmhEjlODkRuQJXIdQOSo1wlch3l5EpagS6upEQTxGD8hDAliMIRgukajqCAnUD6BOwQhbQF0SekjSjo
-        M4AhQZ9EYdGFGRIWTZQ4oDBDEwcotUZBSqTWIEo+U4BSyWcalJ5pICXTMxElMBtARAIzohR/PYlI8UeU
-        BLMHkUkwidLEdiA6TWyDEilnUCuRcoNSjSeomWqcKBn/BsZIxk90XMUaxjquokEHutxj7ANdGnTk0X8x
-        Rj/yqEGHgg28MhpKCUJ0bF4BSgpCdLDkQEoL0qCjV3sSJQjR4cQ9iBSE6PjujkQL0qAD7jOpJUgDtzBn
-        s0dve+DJbdeS1BaEcJOfnhd0h5ncFWNXBG2jjRsdEiIYQ5D70GGMXnyju62aeydtaXViq8HYgjTQz5XO
-        x/QIrxYKYSEBbJNtr/W1rc1UBLkPYyYYyMLoIoZ8FYt5tJg+1sm62caj+IyxmaIgHgZFMlKV4cOM6eYv
-        mtkPmJKCeUKYvIUZdQj/5mf8H7/D77IMy7KOBwGWU2QOgiwKCTIxJMjE+AcF8+tSIo5R3QAAAABJRU5E
-        rkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAW1JREFUOE/V
+        lLFKA0EQhk9FUUG0ExFB1MbOSvAVLGxsbAQrH0O0sxYsfATTWVkoXKNBsrO5uLN7udlEIwhaq9i6MnAJ
+        lzWKWWz84eeOuZmPYe/+i6J/I1cqDWVGbFgNh/1ZbPKsz4v4ASG8EcqLtjOEd0J5W6x9NbzyrM+LCMW+
+        RYi7a/BMWmwVa754hmf9+o9Ai3KZEI5Ji5OOFexxTxjQVFYI4dRqKLVNCEfcEwQs1nwFAY0xI2kKM/w2
+        qVabdc4NNLEyxz1BQFJi3Sp5RkasEsrrBsIiIdS5JwjonBvMsqsJrt0BTBavQUD+4EmJ84aqrmUIsmnk
+        EiE8cE8QkO8BYLzXNQj45xsGnaFVcicHdNJgOctaXHYlxDfPoNj2edFjuTzGccpT4KyGuJ2KDOGFNFSL
+        SekkRsNBqxWP+rwu8V/HKrlrlVjIz+up5xa/FW9KCB+8ae60lSRTfl9fusebad6wniTzADDsP/9On+4x
+        RXbP/XTDAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="fieldDireccion.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAcdJREFUOE/V
+        kstqVEEQhsfLTlfZGXSjG4NxoaKCKPgIIpIImp14iTs3LvQBfAZdCIIoARUXEm8wu5BM/x04/XfPdPXR
+        VzB4RYhypE44w6RxksxOPyjoqr/+4pzqbrX+ayTgtNA8FeLjWtgnPWeP5X1bQhxuCfFLaJ6Jx5U6iOdC
+        rIq3N/P+DenRnFVjDOZCrkXaqXpoYc/k2lAS8Vo8HjZ5CAtjGk0utI+EeNU3bIYQn8XhnJ5jXB4X4qsQ
+        X7pd7NFaoj0vxEruG4oOVJOeS+LA2i6xmpzZrzVdxUgDk7Mvo8fjJu8WZrIMnUNNrrctxIu+YTN67JwS
+        4ncZzJFcKwscVU1853iubUgk3ujlVFW1ranpWYi34sz8+u4tkGgnhPgRietNTTxmI/FdHA6u7x5Cu93e
+        mZy9mjzuSTAndJgQP3WHPYfDek7OXEsBJ7VHe6u5uR35nD7J467entC+E4f7VVVtF2/ei8OiEEv6u3WN
+        eFD3ECuJ5k4+pyaEsDsRnyJxY7D+gZ194rCsURaLewc1XYF61DtYr4m0l1UsimJXrg2j/xHOXsq1ltDM
+        CPEtERgl1PPXgfWT8OZidLg9Sgjt9ODT+vf5AxiyrH63rL5nAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="fieldTituloLogotipo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAThJREFUOE/V
+        lD1KxFAUhTOVuAV/Wl2DVhYuYIoB7Sxzv5NECQxMOwiCC3ANbsLCRqwsRXsdkAFtHBttlCtvIDwmJuM0
+        euAW79xzvzySvJck/0p5nq9IOgJO25RnfSbmfEvSOvAC3AEXbUrSPfBsZqsxz4ElcJskSSfu/aCOb8B3
+        GjccOAQuY7+qLMs2JB2b2f70wT7js3G2EVgUxRLwBFwBb5L23F8EuAZ8AruSroET938NdJnZeYCOgU33
+        FgK6fKdlWS5P13MDJW2b2SPwkKbpVtyfC2hmO8AEOAs1ca+aaQ0EusA7MKh4g+B1K14zUFLPByX1Z+T6
+        odfzdSMQOAA+AIszU3kvZDxbC/SjNwrBIu7HMrPDkB3VHT2/HPwD+D9207LGZvY683JweQPIwstvU1nt
+        9fVn9QVaByIeEievzwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="buscadorImagen.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>138, 17</value>
+  </metadata>
 </root>
