--- a/aDVanceERP.Modulos.Finanzas/Properties/Resources.resx
+++ b/aDVanceERP.Modulos.Finanzas/Properties/Resources.resx
@@ -124,4 +124,13 @@
   <data name="images2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\images2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="open_sign_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\open_sign_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="closed_sign_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\closed_sign_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="open_check_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\open_check_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
